--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -10,7 +10,10 @@
                 <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
                     <ul class="flex flex-col mt-4 space-x-6 text-sm font-medium lg:flex-row xl:space-x-8 lg:mt-0">
                         <li>
-                            <a href="<%= root_url %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">Home</a>
+                            <a href="<%= root_url %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">Dashboard</a>
+                        </li>
+                        <li>
+                            <a href="<%= public_page_index_url %>" class="block rounded text-primary-700 dark:text-primary-500" aria-current="page">My Public Page</a>
                         </li>
                         <li>
                             <a href="#" class="block text-gray-700 hover:text-primary-700 dark:text-gray-400 dark:hover:text-white">Leaderboards</a>
@@ -128,8 +131,8 @@
                 </div>
                 <button type="button" class="flex mx-3 text-sm bg-gray-800 rounded-full md:mr-0 flex-shrink-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="userMenuDropdownButton" aria-expanded="false" data-dropdown-toggle="userMenuDropdown">
                     <span class="sr-only">Open user menu</span>
-                    <% if current_user.identity && current_user.identity.image_url.present? %>
-                      <img class="w-8 h-8 rounded-full" src="<%= current_user.identity.image_url %>" alt="user photo">
+                    <% if current_or_guest_user.identity && current_or_guest_user.identity.image_url.present? %>
+                      <img class="w-8 h-8 rounded-full" src="<%= current_or_guest_user.identity.image_url %>" alt="user photo">
                     <% else %>
                       <img class="w-8 h-8 rounded-full" src="<%= image_url("default-avatar") %>" alt="user photo">
                     <% end %>
@@ -138,8 +141,8 @@
                 <!-- Dropdown menu -->
                 <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600" id="userMenuDropdown">
                     <div class="py-3 px-4">
-                        <span class="block text-sm font-semibold text-gray-900 dark:text-white"><%= current_user.name %></span>
-                        <span class="block text-sm font-light text-gray-500 truncate dark:text-gray-400"><%= current_user.email %></span>
+                        <span class="block text-sm font-semibold text-gray-900 dark:text-white"><%= current_or_guest_user.name %></span>
+                        <span class="block text-sm font-light text-gray-500 truncate dark:text-gray-400"><%= current_or_guest_user.email %></span>
                     </div>
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
                         <li>
