--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
     </div>
     <div class="profile-container">
       <div class="flex items-center space-x-3">
-        <%= render ShareButtonComponent.new %>
+        <%= render PrimaryActionButtonComponent.new(user: current_or_guest_user) %>
         <img class="h-12 w-12 rounded-full" src="https://placekitten.com/g/200/300" alt="Profile picture">
         <div class="flex flex-col justify-center">
           <div class="text-lg font-medium leading-6 text-gray-900">Loftwah</div>
