--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,23 +13,29 @@
         <div class="mb-4">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
 
-      <div class="mb-4">
-        <%= f.label :password, "Password <i>(leave blank if you don't want to change it)</i>".html_safe, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
-        <%= f.password_field :password, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
-        <% if @minimum_password_length %>
-          <div class="text-sm text-gray-500"><%= @minimum_password_length %> characters minimum</div>
-        <% end %>
-      </div>
+      <% if resource.identity.nil? || resource.identity.provider != 'twitter' %>
+        <div class="mb-4">
+          <%= f.label :password, "Password <i>(leave blank if you don't want to change it)</i>".html_safe, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
+          <%= f.password_field :password, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
+          <% if @minimum_password_length %>
+            <div class="text-sm text-gray-500"><%= @minimum_password_length %> characters minimum</div>
+          <% end %>
+        </div>
 
-      <div class="mb-4">
-        <%= f.label :password_confirmation, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
-      </div>
+        <div class="mb-4">
+          <%= f.label :password_confirmation, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
+        </div>
 
-      <div class="mb-4">
-        <%= f.label :current_password, "Current password <i>(we need your current password to confirm your changes)</i>".html_safe, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
-        <%= f.password_field :current_password, autocomplete: "current-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
-      </div>
+        <div class="mb-4">
+          <%= f.label :current_password, "Current password <i>(we need your current password to confirm your changes)</i>".html_safe, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
+        </div>
+      <% else %>
+        <div class="mb-4 text-sm font-medium text-gray-900 dark:text-gray-300">
+          You signed up through Twitter and do not have a password set. Continue to sign in via Twitter.
+        </div>
+      <% end %>
 
       <div class="actions mb-4">
         <%= f.submit "Update", class: 'w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800' %>
@@ -40,7 +46,6 @@
       <%= link_to "Cancel my account", registration_path(resource_name),
     data: { confirm: "Are you sure?" }, method: :delete,
     class: 'text-red-600 hover:text-red-700 dark:text-red-500 dark:hover:text-red-600' %>
-
     </div>
   </div>
 </div>
