--- a/app/views/public_page/index.html.erb
+++ b/app/views/public_page/index.html.erb
@@ -15,7 +15,8 @@
     <!-- Profile Photo and Info -->
     <div class="flex items-center space-x-4">
       <!-- Profile Photo -->
-      <img class="h-24 w-24 rounded-full border-4 border-white shadow-lg" src="http://placekitten.com/g/200/300" alt="Twitter Profile Photo">
+      <%= image_tag("demo/loftwah", alt: "Loftwah Profile image", class: "h-24 w-24 rounded-full border-4 border-white shadow-lg") %>
+
       <!-- Profile Info -->
       <div>
         <h1 class="text-2xl font-bold text-gray-900">Dean Lofts</h1>
