--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -8,14 +8,14 @@
 
 <div class="relative bg-white">
   <!-- Header Photo -->
-  <img class="h-48 w-full object-cover shadow-lg" src="https://pbs.twimg.com/profile_banners/1192091185/1701762563/1500x500" alt="Twitter Header Photo">
+  <img class="h-48 w-full object-cover shadow-lg" src="<%= @user.banner_url %>" alt="Twitter Header Photo">
 
   <!-- Profile Container -->
   <div class="flex items-end justify-between px-4 py-4 lg:py-8">
     <!-- Profile Photo and Info -->
     <div class="flex items-center space-x-4">
       <!-- Profile Photo -->
-      <%= image_tag("demo/loftwah", alt: "Loftwah Profile image", class: "h-24 w-24 rounded-full border-4 border-white shadow-lg") %>
+      <%= image_tag(@user.image_url, alt: @user.twitter_handle + " Profile image", class: "h-24 w-24 rounded-full border-4 border-white shadow-lg") %>
 
       <!-- Profile Info -->
       <div>
