--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -15,12 +15,12 @@
     <!-- Profile Photo and Info -->
     <div class="flex items-center space-x-4">
       <!-- Profile Photo -->
-      <%= image_tag(@user.image_url, alt: @user.twitter_handle + " Profile image", class: "h-24 w-24 rounded-full border-4 border-white shadow-lg") %>
+      <%= image_tag(@user.image_url, alt: @user.handle + " Profile image", class: "h-24 w-24 rounded-full border-4 border-white shadow-lg") %>
 
       <!-- Profile Info -->
       <div>
         <h1 class="text-2xl font-bold text-gray-900"><%= @user.name %></h1>
-        <p class="text-sm text-gray-500"><%= @user.twitter_handle %></p>
+        <p class="text-sm text-gray-500"><%= @user.handle %></p>
       </div>
     </div>
 
