--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -46,7 +46,7 @@
   <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Impressions</h5>
-      <p class="font-normal text-gray-700 dark:text-gray-400">1.62M</p>
+      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @impressions_count %></p>
       <p class="font-normal text-green-600 dark:text-green-400">30.3% increase</p>
     </div>
   </a>
@@ -62,8 +62,8 @@
   <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Followers</h5>
-      <p class="font-normal text-gray-700 dark:text-gray-400">20.46K</p>
-      <p class="font-normal text-blue-600 dark:text-blue-400">2.3% decrease</p>
+      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @followers_count %></p>
+      <p class="font-normal text-blue-600 dark:text-blue-400"><%= @followers_count_change_percentage_text %></p>
     </div>
   </a>
 </div>
