--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,8 +1,8 @@
 <div class="text-sm font-medium text-gray-500 dark:text-gray-400">
   <% unless controller_name == 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name) %><br>
+    Already have an account? <%= link_to "Log in", new_session_path(resource_name) %><br>
   <% end %>
-
+  <br />
   <% if devise_mapping.registerable? && !(controller_name == 'registrations' && action_name == 'new') %>
    Not registered? <strong> <%= link_to "Create account", new_registration_path(resource_name) %></strong><br>
   <% end %>
