--- a/app/views/user_settings/edit.html.erb
+++ b/app/views/user_settings/edit.html.erb
@@ -9,9 +9,9 @@
             <%= label_tag "user_settings[#{key}]", UserSetting.description(key), class: 'block text-sm font-medium text-gray-900 dark:text-gray-300' %>
           </div>
           <div class="flex items-center">
-            <%= image_tag current_user.setting(key) == 'true' ? UserSetting.on_image(key) : UserSetting.off_image(key), class: 'mr-2' if UserSetting.on_image(key) && UserSetting.off_image(key) %>
+            <%= image_tag current_user.setting(key) == true ? UserSetting.on_image(key) : UserSetting.off_image(key), class: 'mr-2' if UserSetting.on_image(key) && UserSetting.off_image(key) %>
             <label class="inline-flex items-center cursor-pointer">
-              <%= check_box_tag "user_settings[#{key}]", 'true', current_user.setting(key) == 'true', class: 'sr-only peer', data: { action: "change->user-settings#updateSetting", user_settings_target: "toggle" } %>
+              <%= check_box_tag "user_settings[#{key}]", 'true', current_user.setting(key) == true, class: 'sr-only peer', data: { action: "change->user-settings#updateSetting", user_settings_target: "toggle" } %>
               <div class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
             </label>
           </div>
